--- a/lib/package.json
+++ b/lib/package.json
@@ -4,7 +4,7 @@
   "description": "JS library for tracking Front-End performance metrics.",
   "main": "index.js",
   "directories": {
-    "lib": "lib"
+    "lib": ""
   },
   "scripts": {
     "build:dev": "webpack --mode development",
