--- a/lib/package.json
+++ b/lib/package.json
@@ -7,7 +7,7 @@
     "lib": ""
   },
   "scripts": {
-    "build:dev": "webpack --mode development",
+    "build:dev": "tsc -m es6 --outDir dist/esm",
     "build:prod": "webpack --mode production"
   },
   "repository": {
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/16artemiy16/perfwatcher#readme",
   "devDependencies": {
     "ts-loader": "^9.4.2",
+    "typescript": "^5.0.2",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.0"
