--- a/lib/package.json
+++ b/lib/package.json
@@ -7,6 +7,7 @@
     "lib": ""
   },
   "scripts": {
+    "test": "jasmine --config=jasmine.json",
     "build:dev": "tsc -m es6 --outDir dist/esm",
     "build:prod": "webpack --mode production"
   },
@@ -21,7 +22,11 @@
   },
   "homepage": "https://github.com/16artemiy16/perfwatcher#readme",
   "devDependencies": {
+    "@types/jasmine": "^4.3.1",
+    "jasmine": "^4.6.0",
+    "jasmine-console-reporter": "^3.1.0",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1",
