--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,11 @@ jobs:
   run-unit-tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+      - name: Getting the repo code
+        uses: actions/checkout@v3
+      - name: Installing deps
+        working-directory: ./lib
+        run: npm i
+      - name: Running tests
+        working-directory: ./lib
+        run: npm run test
