--- a/lib/package.json
+++ b/lib/package.json
@@ -7,6 +7,7 @@
     "lib": ""
   },
   "scripts": {
+    "lint": "eslint src",
     "test": "jasmine --config=jasmine.json",
     "build:dev": "tsc -m es6 --outDir dist/esm",
     "build:prod": "webpack --mode production"
@@ -23,6 +24,9 @@
   "homepage": "https://github.com/16artemiy16/perfwatcher#readme",
   "devDependencies": {
     "@types/jasmine": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.36.0",
     "jasmine": "^4.6.0",
     "jasmine-console-reporter": "^3.1.0",
     "ts-loader": "^9.4.2",
