--- a/lib/package.json
+++ b/lib/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "eslint src --fix",
     "test": "jasmine --config=jasmine.json",
     "build:dev": "tsc -m es6 --outDir dist/esm",
-    "build:prod": "webpack --mode production"
+    "build:prod": "webpack --mode production",
+    "prepare": "cd .. && husky install lib/.husky"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.36.0",
+    "husky": "^8.0.3",
     "jasmine": "^4.6.0",
     "jasmine-console-reporter": "^3.1.0",
     "ts-loader": "^9.4.2",
