--- a/lib/package.json
+++ b/lib/package.json
@@ -12,7 +12,7 @@
     "test": "jasmine --config=jasmine.json",
     "build:dev": "tsc -m es6 --outDir dist/esm",
     "build:prod": "webpack --mode production",
-    "prepare": "cd .. && husky install lib/.husky"
+    "prepare": "cd .. && husky install ./lib/.husky"
   },
   "repository": {
     "type": "git",
